Upgraded to Duktape 2.6.0. timeout test is not working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 
 members = [
-    "ducc",
-    "ducc-sys",
-    "ducc-serde",
+    "ducc-reborn",
+    "ducc-reborn-sys",
+    "ducc-reborn-serde",
 ]
