--- a/ducc-reborn-sys/Cargo.toml
+++ b/ducc-reborn-sys/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "ducc-sys"
+name = "ducc-reborn-sys"
 version = "0.1.2"
 description = "Low-level Duktape FFI for the `ducc` crate"
-authors = ["Skyler Lipthay <sl@skylerlipthay.com>"]
-repository = "https://github.com/SkylerLipthay/ducc"
+authors = ["Skyler Lipthay <sl@skylerlipthay.com>", "Marvin Lee Fimmel <kontakt@ekranos.me>"]
+repository = "https://github.com/Ekranos/ducc-reborn"
 license = "MIT"
 
 [features]
@@ -15,7 +15,7 @@ use-exec-timeout-check = []
 build-ffi-gen = ["bindgen"]
 
 [dependencies]
-bindgen = { version = "0.36", optional = true }
+bindgen = { version = "0.53.1", optional = true }
 
 [build-dependencies]
 cc = "1.0"
